B1803 Product Additional Image - Unable to see from catalog => CSS FIX for page shifts right when the modal opens up

--- a/catalog/templates/core/css/bootstrap.css
+++ b/catalog/templates/core/css/bootstrap.css
@@ -5940,6 +5940,7 @@ button.close {
 
 .modal-open {
   overflow: hidden;
+  margin-right: 17px;
 }
 
 .modal {
